err/py3amf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Py3AMF-0.8.7.egg-info'...
Listing './lib/python3.5/site-packages/cpyamf'...
Listing './lib/python3.5/site-packages/defusedxml'...
Listing './lib/python3.5/site-packages/defusedxml-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyamf'...
Listing './lib/python3.5/site-packages/pyamf/adapters'...
Compiling './lib/python3.5/site-packages/pyamf/adapters/_sqlalchemy_orm.py'...
***   File "./lib/python3.5/site-packages/pyamf/adapters/_sqlalchemy_orm.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamf/adapters/tests'...
Listing './lib/python3.5/site-packages/pyamf/adapters/tests/django_app'...
Listing './lib/python3.5/site-packages/pyamf/adapters/tests/django_app/adapters'...
Listing './lib/python3.5/site-packages/pyamf/adapters/tests/google'...
Listing './lib/python3.5/site-packages/pyamf/flex'...
Listing './lib/python3.5/site-packages/pyamf/remoting'...
Listing './lib/python3.5/site-packages/pyamf/remoting/client'...
Listing './lib/python3.5/site-packages/pyamf/remoting/gateway'...
Listing './lib/python3.5/site-packages/pyamf/tests'...
Listing './lib/python3.5/site-packages/pyamf/tests/gateway'...
Listing './lib/python3.5/site-packages/pyamf/tests/modules'...
Listing './lib/python3.5/site-packages/pyamf/tests/remoting'...
Listing './lib/python3.5/site-packages/pyamf/util'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
